--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "Mikael Grön <skaramicke@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "nodemon src/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "socket.io": "^4.5.2"
   }
 }
